# Questia-old

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  conanfile.py
cmake/: buildConfiguration.cmake  downloadProject.CMakeLists.cmake.in  downloadProject.cmake  engineDownload.cmake  qengMacros.cmake  safeguards.cmake  setupMacosRPath.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/: CMakeLists.txt
include/Questia/: CMakeLists.txt
shaders/: normal.vert  simple.frag  simple.vert  texture.frag  texture.vert
src/: CMakeLists.txt  Main.cpp  main.rs
src/graphics/: mod.rs  resources.rs  shader.rs
src/math/: graphics.rs
test/: CMakeLists.txt  Test.cpp
