[package]
name = "questia"
version = "0.1.0"
authors = ["Matthew Kaminski <questiagame@gmail.com>"]
edition = "2018"

[dependencies]
gfx = "0.18.2"
gfx-hal = "0.6.0"
gfx-auxil = "0.6.0"
gfx-backend-vulkan = "0.6.1"
winit = "0.22.2"
shaderc = "0.6.2"
bincode = "1.3.1"
serde = { version = "1.0.115", features = ["derive"] }
