[package]
name = "questia"
version = "0.1.0"
authors = ["Matthew Kaminski <questiagame@gmail.com>"]
edition = "2018"

[dependencies]
gfx = "0.18.2"
gfx-hal = "0.7.0"
gfx-auxil = "0.8.0"
gfx-backend-vulkan = "0.7.0"
image = "0.23.14"
winit = "0.24.0"
shaderc = "0.7.1"
bincode = "1.3.1"
serde = { version = "1.0.115", features = ["derive"] }
